--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- CSS stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -24,19 +26,202 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
               </div>
             </div>
           </nav>
+          <!-- Image slider -->
+          <section class="container margin">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner rounded-3">
+                      <div class="carousel-item active">
+                        <div class="row mild-bg d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                                <h1 class="price">$1200</h1>
+                                <button type="button" class="buy-button">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                      </div>
+                  <div class="carousel-item">
+                    <div class="row mild-bg d-flex align-items-center p-5">
+                        <div class="col-lg-7">
+                            <h1>X-Box for your living room</h1>
+                            <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                            <h1 class="price">$600</h1>
+                            <button type="button" class="buy-button">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row mild-bg d-flex align-items-center p-5">
+                        <div class="col-lg-7">
+                            <h1>Cool Dude Headphone</h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                            <h1 class="price">$420</h1>
+                            <button type="button" class="buy-button">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
     </header>
-
+    <main>
+        <!-- Categories -->
+        <section class="container margin">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="orange d-flex align-items-center justify-content-around p-2 rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="" height="110" width="110">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="orchid d-flex align-items-center justify-content-around p-2 rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="" height="110" width="110">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="blue d-flex align-items-center justify-content-around p-2 rounded-3">
+                        <h1 class="text-white">Shoe</h1>
+                        <img src="images/categories/shoes.png" alt="" height="110" width="110">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Shoes -->
+        <section class="container margin" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 320</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5>$120</h5>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This is a short card.</p>
+                      <h5>$320</h5>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red AirMax</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <h5>$360</h5>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Backpack -->
+        <section class="container margin" id="backpack">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <h5 class="card-title">$120</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Niltu Bag</h5>
+                      <h5 class="card-title">$180</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Kaltu Bag</h5>
+                      <h5 class="card-title">$169</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="ms-3 mb-3">
+                        <button type="button" class="buy-button">Buy Now</button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Subscribe -->
+        <section class="container margin" id="subscribe">
+            <div class="mild-bg d-flex justify-content-center align-items-center p-5 rounded-3">
+                <div>
+                    <h3>LET'S STAY IN TOUCH</h3>
+                    <p class="text-secondary mb-2">Get updates on sales, specials and more</p>
+                    <input type="text" placeholder="Your Email">
+                    <br>
+                    <button type="button" class="buy-button">Submit</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="container mt-5">
+        <small><p class="text-center mb-0">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p></small>
+    </footer>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
