--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@
     <main>
         <!-- Categories -->
         <section class="container margin">
-            <div class="row">
-                <div class="col-lg-4">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="orange d-flex align-items-center justify-content-around p-2 rounded-3">
                         <h1 class="text-white">Watch</h1>
                         <img src="images/categories/watch.png" alt="" height="110" width="110">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="orchid d-flex align-items-center justify-content-around p-2 rounded-3">
                         <h1 class="text-white">Bag</h1>
                         <img src="images/categories/bag.png" alt="" height="110" width="110">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="blue d-flex align-items-center justify-content-around p-2 rounded-3">
                         <h1 class="text-white">Shoe</h1>
                         <img src="images/categories/shoes.png" alt="" height="110" width="110">
@@ -119,7 +119,7 @@
         <!-- Shoes -->
         <section class="container margin" id="shoes">
             <h2>Shoes</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
                 <div class="col">
                   <div class="card h-100 border-0 shadow">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -164,7 +164,7 @@
         <!-- Backpack -->
         <section class="container margin" id="backpack">
             <h2>Backpack</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
                 <div class="col">
                   <div class="card h-100 border-0 shadow">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
