removed dummy text

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 320</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">
+                        Though the meaning of 'SPLY 350' is unknown, it's speculated to be 'Supply 350' or 'Saint Pablo Loves You'. Since the sneakers' debut in 2016, the demand for the iconic silhouette has only grown.</p>
                       <h5>$120</h5>
                     </div>
                     <div class="ms-3 mb-3">
@@ -138,7 +139,7 @@
                     <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Nike 360</h5>
-                      <p class="card-text">This is a short card.</p>
+                      <p class="card-text">Nike, Inc. is an American multinational corporation that is engaged in the design, development, manufacturing, and worldwide marketing and sales of footwear, apparel, equipment, accessories, and services.</p>
                       <h5>$320</h5>
                     </div>
                     <div class="ms-3 mb-3">
@@ -151,7 +152,8 @@
                     <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Red AirMax</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <p class="card-text">
+                        Nike Air Max is a line of shoes produced by Nike, Inc., with the first model released in 1987.</p>
                       <h5>$360</h5>
                     </div>
                     <div class="ms-3 mb-3">
@@ -171,7 +173,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Red Laltu Bag</h5>
                       <h5 class="card-title">$120</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">This is a red OGO bag. OGO is an International Bag brand highly popular for their sustainability</p>
                     </div>
                     <div class="ms-3 mb-3">
                         <button type="button" class="buy-button">Buy Now</button>
@@ -184,7 +186,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Blue Niltu Bag</h5>
                       <h5 class="card-title">$180</h5>
-                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      <p class="card-text">This is a Burton bag. It's a blue small size bag. It has good portability and it's light-weight</p>
                     </div>
                     <div class="ms-3 mb-3">
                         <button type="button" class="buy-button">Buy Now</button>
@@ -197,7 +199,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Black Kaltu Bag</h5>
                       <h5 class="card-title">$169</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      <p class="card-text">This is a Black water-proof bag. It's highly recommended for hiking and long adventures. It's durable and light-weight</p>
                     </div>
                     <div class="ms-3 mb-3">
                         <button type="button" class="buy-button">Buy Now</button>
